# elegy-rhi

./: .gitmodules  CMakeLists.txt
include/: DeviceManager.hpp
src/: DeviceManager.cpp  DeviceManagerDX11.cpp  DeviceManagerDX12.cpp  DeviceManagerVK.cpp
